remove fixed gap between tab bar items

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -59,10 +59,9 @@ main {
   background-color: white;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  gap: 2rem;
 }
 
 @media only screen and (max-width: 500px) {
